<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edittext_password"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp" android:singleLine="true"
            android:textStyle="bold" android:gravity="center"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toTopOf="@+id/textView4" android:layout_marginBottom="32dp"
            style="@style/PrimaryUnderlineEditText"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editText_username"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:singleLine="true"
            android:textStyle="bold" android:gravity="center"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/textView3" android:layout_marginBottom="32dp"
            style="@style/PrimaryUnderlineEditText"/>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textColor="@color/colorTextSecondaryTextView"
            app:fontFamily="@font/roboto"
            app:layout_constraintBottom_toTopOf="@+id/edittext_password" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/textView2" app:fontFamily="@font/roboto"
            android:textColor="@color/colorTextSecondaryTextView"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText_username" android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:fontFamily="@font/iceland" android:textColor="@color/colorPrimary"
            android:textSize="60sp"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp" android:layout_marginRight="128dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="128dp"
            android:layout_marginStart="128dp" style="@style/PrimaryRoundedButton"
            android:layout_marginBottom="64dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:textColor="@color/colorPrimary"
            app:fontFamily="@font/roboto_bold"
            app:layout_constraintBottom_toTopOf="@+id/button_login" android:layout_marginBottom="32dp"/>
</android.support.constraint.ConstraintLayout>