<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SignupActivity">

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar_register"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="@+id/button_register"
            app:layout_constraintBottom_toBottomOf="@+id/button_register" android:indeterminate="false"
            app:layout_constraintStart_toEndOf="@+id/button_register" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:visibility="gone"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edittext_username"
            app:layout_constraintStart_toStartOf="@+id/edittext_name"
            android:singleLine="true"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/textView10" android:layout_marginBottom="16dp"
            style="@style/PrimaryUnderlineEditText"
            app:layout_constraintEnd_toEndOf="@+id/edittext_name"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/textView8" app:fontFamily="@font/roboto"
            android:textColor="@color/colorTextSecondaryTextView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/edittext_username"
            app:layout_constraintEnd_toEndOf="@+id/edittext_username"
            app:layout_constraintStart_toStartOf="@+id/edittext_username"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edittext_password"
            android:singleLine="true"
            android:textStyle="bold" android:gravity="center"
            style="@style/PrimaryUnderlineEditText"
            app:layout_constraintEnd_toEndOf="@+id/edittext_name"
            app:layout_constraintStart_toStartOf="@+id/edittext_name"
            app:layout_constraintBottom_toTopOf="@+id/textView9" android:layout_marginBottom="16dp"
            android:inputType="textPassword"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/textView7" app:fontFamily="@font/roboto"
            android:textColor="@color/colorTextSecondaryTextView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/edittext_name"
            app:layout_constraintEnd_toEndOf="@+id/edittext_name"
            app:layout_constraintStart_toStartOf="@+id/edittext_name"/>
    <TextView
            android:text="@string/age"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/textView9" app:fontFamily="@font/roboto"
            android:textColor="@color/colorTextSecondaryTextView"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/edittext_age"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toTopOf="@+id/edittext_age"
            app:layout_constraintEnd_toEndOf="@+id/edittext_age"
    />
    <Button
            android:text="@string/register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_register"
            style="@style/PrimaryRoundedButton"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/edittext_name"
            app:layout_constraintStart_toStartOf="parent"
            android:singleLine="true"
            android:textStyle="bold" android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/textView8" android:layout_marginBottom="16dp"
            style="@style/PrimaryUnderlineEditText"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496">
        <requestFocus />
    </EditText>
    <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:id="@+id/textView10" app:fontFamily="@font/roboto"
            android:textColor="@color/colorTextSecondaryTextView"
            app:layout_constraintBottom_toTopOf="@+id/edittext_password" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="@+id/edittext_password"
            app:layout_constraintStart_toStartOf="@+id/edittext_password"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" android:layout_marginTop="80dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:fontFamily="@font/iceland" android:textColor="@color/colorPrimary"
            android:textSize="60sp"/>
    <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:ems="10"
            android:id="@+id/edittext_age"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="@+id/edittext_password"
            app:layout_constraintStart_toStartOf="@+id/edittext_password" android:layout_marginBottom="32dp"
            style="@style/PrimaryUnderlineEditText"/>
</android.support.constraint.ConstraintLayout>